crates/sclc/tree-sitter-scl/test/corpus/operators.txt
================
Arithmetic operators
================

1 + 2
3 - 4
5 * 6
7 / 8

---

(source_file
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer)))

================
Comparison operators
================

a < b
a <= b
a > b
a >= b

---

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier)))

================
Equality operators
================

a == b
a != b

---

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier)))

================
Logical operators
================

a && b
a || b

---

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier)))

================
Unary negation
================

let x = -42

---

(source_file
  (let_binding
    name: (identifier)
    value: (unary_expression
      operand: (integer))))

================
Unary logical not
================

let x = !true
let y = !(a == b)

---

(source_file
  (let_binding
    name: (identifier)
    value: (unary_expression
      operand: (boolean)))
  (let_binding
    name: (identifier)
    value: (unary_expression
      operand: (parenthesized_expression
        (binary_expression
          left: (identifier)
          right: (identifier))))))

================
Operator precedence
================

1 + 2 * 3

---

(source_file
  (binary_expression
    left: (integer)
    right: (binary_expression
      left: (integer)
      right: (integer))))
